# DarkBlaze Uni-UI — engine workspace.
#
# A clean-room, Rust-native declarative UI engine. Owned outright; destined
# for the BSL "Sanity License". NOT a Slint fork — we share none of Slint's
# (or any copyleft) source. Every dependency is permissive (MIT/Apache/BSD).
#
# Architecture: organized by THE FLOW — own the trait spine, isolate every
# backend as a swappable leaf behind it. See ./FLOW.md.
#
# Clean-room rule, binding: no crate here may read, vendor, or port GPL
# `i-slint-*` code or Apple-private framework internals.
#
# Build note: build on the home filesystem (engine/target), NEVER /tmp
# (a 3GB tmpfs that quota-fails on the GPU dependency tree).

[workspace]
resolver = "2"
members = [
    "crates/uni-ir",
    "crates/uni-tokens",
    "crates/uni-react",
    "crates/uni-render",
    "crates/uni-dsl",
    "crates/uni-core",
    "crates/uni-spring",
    "crates/uni-env",
    "crates/uni-simd",
    "crates/uni-a11y",
    "crates/uni-webframe",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["DarkBlaze"]
publish = false
# license: LicenseRef-DarkBlaze-Sanity (BSL 1.1 + no-compete grant) — to be finalized.

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
