[package]
name = "uni-core"
description = "DarkBlaze Uni-UI — lowers a uni-ir Document into a uni-render Scene (layout + paint)."
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[features]
# Default build stays light: text intrinsic sizing uses the cheap heuristic.
default = []
# `real-text` swaps in a `cosmic-text`-backed measurer (real shaping metrics).
# Off by default so the common build pulls in no font stack.
real-text = ["dep:cosmic-text"]

[dependencies]
taffy = "0.11"
uni-ir = { path = "../uni-ir" }
uni-render = { path = "../uni-render" }
cosmic-text = { version = "0.12", optional = true }

[dev-dependencies]
uni-dsl = { path = "../uni-dsl" }
winit = "0.30"
