[package]
name = "uni-ir"
description = "DarkBlaze Uni-UI — the opinionated, AI-malleable UI intermediate representation."
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

# Keystone crate: zero dependencies by design. The IR is pure data + a
# mutation stream; everything else in the engine lowers into it or consumes
# its mutations. Standard library only.
[dependencies]
