[package]
name = "uni-runtime"
description = "DarkBlaze Uni-UI — the app/event-loop layer: closes the accountability circle (input -> hit-test -> fire(Origin) -> handler -> re-render) into the live UI."
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[features]
# The browser/wasm canvas-host leaf (software CanvasRenderer). Native-testable;
# the wasm-bindgen JS glue is additive and target-gated.
web = []

[dependencies]
uni-ir = { path = "../uni-ir" }
uni-core = { path = "../uni-core" }
uni-render = { path = "../uni-render" }
uni-react = { path = "../uni-react" }
uni-reactor = { path = "../uni-reactor" }
uni-widgets = { path = "../uni-widgets" }
uni-dsl = { path = "../uni-dsl" }
uni-env = { path = "../uni-env" }
uni-spring = { path = "../uni-spring" }
uni-a11y = { path = "../uni-a11y" }
winit = "0.30"
accesskit = "0.24"
accesskit_winit = "0.33"

[dev-dependencies]
uni-tokens = { path = "../uni-tokens" }
