[package]
name = "uni-shells"
description = "DarkBlaze Uni-UI — adaptive shell widgets: Smart-Topbar and other OS-chrome surfaces that morph between stages via spring animation."
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
uni-ir = { path = "../uni-ir" }
uni-tokens = { path = "../uni-tokens" }
uni-spring = { path = "../uni-spring" }
uni-env = { path = "../uni-env" }
