[package]
name = "uni-simd"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
# Safe, portable SIMD with *runtime* feature detection + dispatch.
# MIT / Apache-2.0 (permissive — fits the workspace clean-room rule).
pulp = "0.22.2"

[dev-dependencies]
# Tiny deterministic PRNG for fixed-seed "random-ish" test inputs.
# (No `rand` to keep the dep tree minimal; we roll a SplitMix64 inline.)
