[package]
name = "uni-synthesis"
description = "DarkBlaze Uni-UI — per-user AI synthesis: adapts the UI Document to the individual user via the Origin::Ai mutation path."
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
uni-ir = { path = "../uni-ir" }
uni-env = { path = "../uni-env" }
uni-tokens = { path = "../uni-tokens" }
