[package]
name = "uni-webframe"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

description = "Uni-UI Flow seam for foreign web engines — the WebBackend trait (filled later by OS-webview/Servo) plus a light placeholder stub. No browser dependency in v0."

# All dependencies are permissive (MIT / Apache-2.0 / BSD), per the workspace
# clean-room rule. v0 deliberately pulls in NO web engine (no wry/servo) — only
# the renderer-agnostic Scene/DrawCmd vocabulary it must paint into.

[dependencies]
uni-render = { path = "../uni-render" }
