[package]
name = "uni-widgets"
description = "DarkBlaze Uni-UI — widget library: styled, interactive uni-ir subtrees (Button, Label, Checkbox, Card, List)."
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
uni-ir = { path = "../uni-ir" }
uni-tokens = { path = "../uni-tokens" }
uni-core = { path = "../uni-core" }
